added aws deploy to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,16 @@ before_install:
 script:
     - docker run -e CI=true docker-react npm run test
 
+deploy:
+    provider: elasticbeanstalk
+    region: "us-east-2"
+    app: docker-react
+    end: "DockerReact-env-1"
+    bucket_name: "elasticbeanstalk-us-east-2-327175294764"
+    bucket_path: "docker-react"
+    on:
+        branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret:
+        secure: "$AWS_SECRET_KEY"
+    
