--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,6 @@ deploy:
     bucket_path: "docker-react"
     on:
         branch: master
-    access_key_id: $AWS_ACCESS_KEY
-    secret:
-        secure: "$AWS_SECRET_KEY"
+    access_key_id: AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
     
